package com.minacontrol.reportes.exception;

import org.springframework.http.HttpStatus;
import org.springframework.web.bind.annotation.ResponseStatus;

@ResponseStatus(HttpStatus.BAD_REQUEST)
public class ParametrosReporteInvalidosException extends RuntimeException {
    public ParametrosReporteInvalidosException(String message) {
        super(message);
    }
}
