package com.minacontrol.reportes.enums;

public enum FormatoReporte {
    PDF,
    EXCEL,
    CSV
}
